<?xml version="1.0"?>
<package>
  <name>cepton</name>
  <version>0.0.0</version>
  <description>Cepton lidar</description>

  <maintainer email="jon.allen@ceptontech.com">Jonathan Allen</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/cepton</url> -->

  <author email="jon.allen@ceptontech.com">Jonathan Allen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
